Fix sticky header on mobile

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -36,21 +36,29 @@ body {
 }
 
 .wrapper {
-  margin: 0;
-  height: 100%;
-  display: flex;
+ min-height: 100vh;
+ display: flex;
   flex-direction: column;
   justify-content: stretch;
+  overflow: hidden;
+  height: 100%;
+}
+
+.scroll-wrapper {
+  display: flex;
+  flex: 1;
+  overflow-y: auto;
+  flex-direction: column;
 }
 
 .content {
   max-width: 1100px;
   margin: 0 auto;
-  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 1.25rem;
+  flex: 1 0 auto;
 }
 
 .content.home {
@@ -459,6 +467,14 @@ h1:hover {
 }
 
 @media (min-width: 768px) {
+  .wrapper {
+    height: auto;
+    overflow-y: auto;
+  }
+
+  .scroll-wrapper {
+    overflow:initial;
+  }
   .header {
     height: auto;
   }
